Fix TabSheet caption icon alignment on Chrome and Safari (#13077)

--- a/WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet-normal-style.scss
+++ b/WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet-normal-style.scss
@@ -144,6 +144,12 @@
 .v-sa & .#{$primaryStyleName}-tabs .v-captiontext {
 	display: inline-block;
 }
+
+/* Align TabSheet icons differently on Chromes and Safaris #13077 */
+.v-sa & .#{$primaryStyleName}-tabs .v-icon {
+	vertical-align: top;
+}
+
 .#{$primaryStyleName}-tabs .v-icon {
 	width: 16px !important;
 	height: 16px !important;
